# hermes-switch

./: .gitignore  README.md  forward.py  hermes-switch.sh  pyproject.toml  run.py  启动-HermesSwitch.bat
hermes_switch/: __init__.py  __main__.py  capabilities.py  endpoints.py  server.py
hermes_switch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hermes_switch/templates/: index.html
